test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/46/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/46/Solution.java:41: error: unreachable statement
        for (; false; j++) {
                           ^
1 error
